完成定稿后的工具箱，节点做成配置型节点，未全部完成

--- a/src/components/index.less
+++ b/src/components/index.less
@@ -52,6 +52,8 @@
 @scarlet: #d0011b;
 @warm-grey-four: #808080;
 @warm-grey-five: #7f7f7f;
+@warm-pink: #ff4886;
+@warm-pink-24: rgba(255, 72, 134, 0.24);
 
 /* Text styles */
 
@@ -324,7 +326,7 @@ h6 {
 
 .ping-fang-sc-medium {
   font-family: PingFangSC-Medium, sans-serif;
-  font-size: 7px;
+  font-size: 14px;
   font-weight: 500;
   letter-spacing: 0.1px;
   color: @charcoal-grey;
@@ -361,6 +363,16 @@ h6 {
 @hr                     : @white-seven;
 @identifier             : @white-eleven;
 @identifier-active      : @water-blue;
+@button-inactivate      : @white-eight;
+@search-input           : @white-eight;
+@button-activate        : @dark-sky-blue;
+@back-btn               : @grey-four;
+@reload-icon            : @dark-sky-blue;
+@tool-box-hr            : @grey-four;
+@logic-node-bg          : @dark-sky-blue;
+@logic-node-shadow      : @dark-sky-blue-two-24;
+@operator-node-bg       : @warm-pink;
+@operator-node-shadow   : @warm-pink-24;
 
 @blue-text              : @dark-sky-blue;
 @black-text             : @charcoal-grey;
@@ -369,6 +381,8 @@ h6 {
 @last-sync-time         : @grey-four;
 @warn-text              : @squash;
 @error-text             : @lightish-red;
+@search-placeholder     : @grey-four;
+@tool-box-text          : @grey-four;
 
 /* 类 */
 .single-line-wrap{
