--- a/src/components/index.less
+++ b/src/components/index.less
@@ -12,6 +12,7 @@
 @aqua-marine: #50e3c2;
 @white-three: #e8e8e8;
 @charcoal-grey: #4a4a4a;
+@func-grey: #595959;
 @white-four: #dadada;
 @white-five: #f2f2f2;
 @black-10: rgba(0, 0, 0, 0.1);
