--- a/src/components/index.less
+++ b/src/components/index.less
@@ -2,7 +2,11 @@
 
 @white: #ffffff;
 @black: #000000;
-@dark-sky-blue: #4990e2;
+@dark-sky-blue: #4A90e2;
+@chartre-green: #6ac60f;
+@chartre-green-shadow: rgba(114, 208, 20, 0.24);
+@pomelo-orange: #ff6562;
+@pomelo-orange-shadow: rgba(255, 101, 98, 0.24);
 @apple-green: #7ed321;
 @white-two: #dfdfdf;
 @black-20: rgba(0, 0, 0, 0.2);
@@ -55,6 +59,7 @@
 @warm-grey-five: #7f7f7f;
 @warm-pink: #ff4886;
 @warm-pink-24: rgba(255, 72, 134, 0.24);
+@content-shadow: rgba(0, 0, 0, 0.1);
 
 /* Text styles */
 
@@ -372,9 +377,11 @@ h6 {
 @tool-box-hr            : @grey-four;
 @logic-node-bg          : @dark-sky-blue;
 @logic-node-shadow      : @dark-sky-blue-two-24;
+@control-node-shadow    : @chartre-green-shadow;
 @operator-node-bg       : @warm-pink;
 @operator-node-shadow   : @warm-pink-24;
-
+@math-node-shadow       : @liliac-two-24;
+@utility-node-shadow    : @pomelo-orange-shadow;
 @blue-text              : @dark-sky-blue;
 @black-text             : @charcoal-grey;
 @node-text              : @white;
