--- a/src/components/index.less
+++ b/src/components/index.less
@@ -7,6 +7,8 @@
 @chartre-green-shadow: rgba(114, 208, 20, 0.24);
 @pomelo-orange: #ff6562;
 @pomelo-orange-shadow: rgba(255, 101, 98, 0.24);
+@bludi-blue: #00D5E1;
+@bludi-blue-shadow: rgba(0, 213, 225, 0.24);
 @apple-green: #7ed321;
 @white-two: #dfdfdf;
 @black-20: rgba(0, 0, 0, 0.2);
